--- a/src/screens/ContactUs/ContactUs.css
+++ b/src/screens/ContactUs/ContactUs.css
@@ -32,7 +32,7 @@
 input:hover {
   outline: none;
   border-color: rgba(0, 48, 73, 0.4);
-  background-color: #fff;
+  /* background-color: #fff; */
   box-shadow: 0 0 0 4px rgb(0 48 73 / 10%);
 }
 
