--- a/src/screens/Dashboard/Screen1.css
+++ b/src/screens/Dashboard/Screen1.css
@@ -73,11 +73,11 @@
 .card1 {
   display: block;
   position: relative;
-  max-width: 305px;
+  /* max-width: 305px; */
   min-height: 120px;
   background-color: #f2f8f9;
   border-radius: 4px;
-  padding: 10px 10px;
+  padding: 32px 24px;
 
   margin: 12px;
   text-decoration: none;
